# DCGAN_78

./: README.md  pyproject.toml
src/: data_loader.py  discriminator.py  generator.py  get_data.py  predict.py  train.py
